# loxcaml

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  dune  dune-project  loxcaml.opam  run.sh  setup.sh  test.lox  test.txt
bench/: fib.lox  loop.lox  run.sh
src/: ast.ml  builtins.ml  dune  interpreter.ml  main.ml  parser.ml  runtime.ml  scanner.ml  token.ml  utils.ml  value.ml
test/: dune  test_loxcaml.ml
